Added integer and float creation examples

--- a/intro_to_python.ipynb
+++ b/intro_to_python.ipynb
@@ -386,14 +386,44 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "425ae9f9",
+   "metadata": {},
+   "source": [
+    "### **Numbers: *Integers and floats***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b72d969f",
+   "metadata": {},
+   "source": [
+    "### **Integers**\n",
+    "\n",
+    "These are whole numbers"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "87096d3a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "age = 22\n",
-    "age = int(22)"
+    "# Creating integers \n",
+    "age = 22        # Assigning an integer value to a variable\n",
+    "age = int(\"22\")  # Converting a string to an integer \n",
+    "age = int(22.9)  # Converting a float to an integer (truncates decimal part)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "52470e19",
+   "metadata": {},
+   "source": [
+    "### **Floats**\n",
+    "\n",
+    "These are decimal numbers "
    ]
   },
   {
@@ -403,10 +433,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# This is a float\n",
+    "# Creating floats\n",
     "\n",
-    "temperature = 27.4\n",
-    "temperature = float(27.4)"
+    "temperature = 27.4 # Assigning a float value to a variable\n",
+    "temperature = float(27) # Converting an integer to a float"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b4f9c63b",
+   "metadata": {},
+   "source": [
+    "### Operators\n",
+    "\n",
+    "```\n",
+    " a + b                      The sum of a and b\n",
+    " a- b                       The difference of a and b\n",
+    " a * b                      The product of a and b\n",
+    " a / b                      The quotient of a and b\n",
+    " a // b                     The floored quotient of a and b\n",
+    " a %b                       The remainder of a / b\n",
+    " abs(a)                     The absolute value of a\n",
+    " divmod(a, b)               The pair: (a // b, a % b)\n",
+    " pow(a, b) or a ** b        a to the power of b\n",
+    "```"
    ]
   },
   {
@@ -421,6 +471,14 @@
     "\n",
     "print(num_1//num_2)\n",
     "print(num_1 % num_2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aacd70b4",
+   "metadata": {},
+   "source": [
+    "### Augmented assignment"
    ]
   },
   {
