Added list operations

--- a/intro_to_python.ipynb
+++ b/intro_to_python.ipynb
@@ -134,7 +134,10 @@
    "source": [
     "name = \"Amanda\" # variable containing 'Amanda'\n",
     "age = 30 # variable containing age\n",
-    "employed = True # variable indicating employment status"
+    "employed = True # variable indicating employment status\n",
+    "\n",
+    "x, y, z = 1, 2, 3  # multiple assignment\n",
+    "print(y)  # prints 2"
    ]
   },
   {
@@ -205,7 +208,7 @@
    "id": "a89b011b",
    "metadata": {},
    "source": [
-    "### Data Types"
+    "### **Data Types**"
    ]
   },
   {
@@ -413,7 +416,9 @@
     "# Creating integers \n",
     "age = 22        # Assigning an integer value to a variable\n",
     "age = int(\"22\")  # Converting a string to an integer \n",
-    "age = int(22.9)  # Converting a float to an integer (truncates decimal part)"
+    "age = int(22.9)  # Converting a float to an integer (truncates decimal part)\n",
+    "\n",
+    "networth = 14_000_000  # Using underscores for better readability"
    ]
   },
   {
@@ -488,34 +493,59 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_1 += 5\n",
+    "num_1 += 5   # this is a short way to write num_1 = num_1 + 5\n",
     "print(num_1)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4d2c5e3a",
+   "cell_type": "markdown",
+   "id": "4b789c7f",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "type(temperature)"
+    "They’re good for:\n",
+    "\n",
+    "- Writing cleaner, shorter code → x += 1 instead of x = x + 1.\n",
+    "\n",
+    "- Updating values in loops → counters, sums, etc.\n",
+    "\n",
+    "- Improving readability → easier to see the intent (“add to this variable,” “multiply this variable,” etc.).\n",
+    "\n",
+    "- Working with different operators → +=, -=, *=, /=, //=, %=."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3df238ea",
+   "metadata": {},
+   "source": [
+    "### **Booleans**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "51caf60e",
+   "metadata": {},
+   "source": [
+    "A Boolean value is either True or False.\n",
+    "\n",
+    "They’re often the result of comparisons:\n",
+    "\n",
+    "```\n",
+    "5 > 3   # True\n",
+    "2 == 7  # False\n",
+    "```\n",
+    "\n",
+    "In Python, things don’t have to literally be True or False to behave that way.\n",
+    "\n",
+    "- A value is truthy if Python treats it like True.\n",
+    "\n",
+    "- A value is falsy if Python treats it like False."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8252de0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "type(name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "060b5bd1",
+   "id": "e9ac011d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,36 +555,72 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "42aea111",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "646ca85c",
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "bool(1)       # True (non-zero numbers are truthy)\n",
+    "bool(0)       # False\n",
+    "bool(\"hi\")    # True (non-empty strings are truthy)\n",
+    "bool(\"\")      # False (empty strings are falsy)\n",
+    "bool([])      # False (empty lists are falsy)\n",
+    "bool([1, 2])  # True (non-empty lists are truthy)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b07c7b98",
+   "metadata": {},
+   "source": [
+    "#### Checking data types"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d2c5e3a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "type(temperature)\n",
+    "type(name)\n",
+    "type(age)\n",
+    "type(working)"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "0e11c0d2",
    "metadata": {},
    "source": [
-    "### Data Structures"
+    "### **Data Structures**"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c243c05c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
    "id": "b284836c",
    "metadata": {},
    "source": [
+    "A data structure is just a way of organizing and storing data so you can use it efficiently. It is a collection or organization of those data types.\n",
+    "\n",
+    "Some basic data structures in python include:\n",
+    "\n",
     "- Lists\n",
     "- Tuples\n",
     "- Dictionaries\n",
     "- Sets"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "abf967ea",
+   "metadata": {},
+   "source": [
+    "### **Lists**\n",
+    "\n",
+    "These are collections of homogenous items wrapped in square brackets. They are mutable (editable), and ordered. \n"
    ]
   },
   {
@@ -564,22 +630,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Lists\n",
-    "# Carry the same type of data\n",
-    "# They are mutable\n",
-    "# They are ordered\n",
-    "\n",
     "names = [\"Amanda\", \"John\", \"Sarah\", \"Mike\"]\n",
     "\n",
     "names[0]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "24697e17",
-   "metadata": {},
-   "source": [
-    "#### List Methods"
    ]
   },
   {
@@ -589,13 +642,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "my_list = [1, 2, 3, 4, 5]\n",
-    "my_other_list = []\n",
-    "my_final_list = list(name)\n",
-    "\n",
-    "print(my_list)\n",
-    "print(my_other_list)\n",
-    "print(my_final_list)"
+    "# Creating lists\n",
+    "my_list = [1, 2, 3, 4, 5]   # A list of integers\n",
+    "my_other_list = []           # An empty list\n",
+    "my_final_list = list(name)   # A list from a string"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "85a4629e",
+   "metadata": {},
+   "source": [
+    "#### List Methods"
    ]
   },
   {
@@ -605,8 +663,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Appending to lists\n",
+    "# This adds elements to the end of the list\n",
     "my_other_list.append(1)\n",
-    "my_other_list.append(2) \n",
+    "my_other_list.append(2)\n",
     "print(my_other_list)"
    ]
   },
@@ -617,6 +677,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Clearing lists\n",
     "my_final_list.clear()\n",
     "my_final_list"
    ]
@@ -628,6 +689,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Copying lists\n",
     "new_list = my_list.copy()\n",
     "new_list"
    ]
@@ -639,6 +701,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Counting how many times an element appears in a list\n",
     "new_list.count(4)"
    ]
   },
@@ -649,6 +712,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Finding the index of an element in a list\n",
     "new_list.index(4)"
    ]
   },
@@ -659,6 +723,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Inserting elements into a list\n",
     "new_list.insert(2, 10)\n",
     "new_list"
    ]
@@ -670,37 +735,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_list.pop()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "516dc1fc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "new_list.pop(2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bfd1437b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(new_list)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2e9f08b1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "new_list.remove(4)"
+    "# Removing elements from a list\n",
+    "new_list.pop()\n",
+    "new_list.pop(2) # Removes the element at index 2"
    ]
   },
   {
@@ -713,16 +750,8 @@
     "new_list.append(6)\n",
     "new_list.append(5)\n",
     "new_list.append(4)\n",
-    "new_list"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "36237ccc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "\n",
+    "# Remove the first occurrence of the element with value 4\n",
     "new_list.remove(4)\n",
     "new_list"
    ]
@@ -734,6 +763,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Reversing a list\n",
     "new_list.reverse()\n",
     "new_list"
    ]
@@ -745,6 +775,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Sorting a list\n",
     "new_list.sort()\n",
     "new_list"
    ]
@@ -756,6 +787,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Extending a list\n",
     "new_list.extend(my_other_list)\n",
     "new_list"
    ]
@@ -766,7 +798,19 @@
    "id": "e6ec3871",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Lists can also be sliced\n",
+    "sliced_list = new_list[1:4]  # Get elements from index 1 to 3\n",
+    "sliced_list"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d9b43627",
+   "metadata": {},
+   "source": [
+    "### **Tuples**"
+   ]
   },
   {
    "cell_type": "code",
@@ -777,11 +821,49 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "id": "cba1a3ff",
+   "metadata": {},
+   "source": [
+    "### **Dictionaries**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "41a03544",
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a1b5915",
+   "metadata": {},
+   "source": [
+    "### **Sets**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "89ed0e7a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f551e58c",
+   "metadata": {},
+   "source": [
+    "### **None**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "710d82da",
+   "metadata": {},
    "source": []
   }
  ],
