Added Tuple Creation and Methods

--- a/intro_to_python.ipynb
+++ b/intro_to_python.ipynb
@@ -620,7 +620,9 @@
    "source": [
     "### **Lists**\n",
     "\n",
-    "These are collections of homogenous items wrapped in square brackets. They are mutable (editable), and ordered. \n"
+    "These are collections of homogenous items wrapped in square brackets. They are mutable (editable), and ordered. Lists a sequence type of data structure.\n",
+    "\n",
+    "A sequence type is a kind of data type in Python that stores items in an ordered collection. Each item has a position (index) and you can access items by their index, slice them, and loop through them.\n"
    ]
   },
   {
@@ -813,11 +815,62 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "11e000f4",
    "metadata": {},
+   "source": [
+    "Tuples are also sequence types. They consist of comma separated values wrapped in parentheses. Unlike lists, they are immutable. They're helpful when you want a sequence that cannot change."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6068914b",
+   "metadata": {},
    "outputs": [],
+   "source": [
+    "# Creating tuples\n",
+    "info = (\"Amanda\", 30, True)\n",
+    "a_tuple = tuple(my_list)\n",
+    "short_tuple = (1,)  # Tuple with a single element requires a comma"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "927b1373",
+   "metadata": {},
+   "source": [
+    "### Tuple Methods\n",
+    "\n",
+    "Because tuples are immutable, there aren't a lot operations that can be carried out on them."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23403e5b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Counting how many times a value appears in a tuple\n",
+    "count = info.count(\"Amanda\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f726908a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Finding the index of an element in a tuple\n",
+    "info.index(30)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c91869c8",
+   "metadata": {},
    "source": []
   },
   {
