Added dictionary manipulation examples

--- a/intro_to_python.ipynb
+++ b/intro_to_python.ipynb
@@ -1054,12 +1054,138 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "54f592c7",
+   "metadata": {},
+   "source": [
+    "A dictionary is a key-value pair wrapped in braces {}. Each value can be accessed through the key it's connected to. Any data type or data structure can be used as a value."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "41a03544",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Creating dictionaries\n",
+    "person = {\n",
+    "    \"name\": \"John\",\n",
+    "    \"age\": 30,\n",
+    "    \"city\": \"New York\"\n",
+    "}\n",
+    "\n",
+    "menu = {\"main_course\" : \"Pasta\", \"dessert\" : \"Ice Cream\"}\n",
+    "\n",
+    "# A list nested in a dictionary\n",
+    "meals = {\n",
+    "    \"breakfast\": [\"Eggs\", \"Toast\", \"Coffee\"],\n",
+    "    \"lunch\": [\"Salad\", \"Sandwich\", \"Juice\"],\n",
+    "    \"dinner\": [\"Steak\", \"Potatoes\", \"Wine\"]\n",
+    "}\n",
+    "\n",
+    "# A dictionary nested in a dictionary\n",
+    "user_profile = {\n",
+    "    \"username\": \"john_doe\",\n",
+    "    \"email\": \"john@example.com\",\n",
+    "    \"preferences\": {\n",
+    "        \"language\": \"English\",\n",
+    "        \"timezone\": \"UTC\"\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "# Using dict()\n",
+    "person = dict(name=\"John\", age=30, city=\"New York\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2963e028",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Accessing dictionary values\n",
+    "print(person[\"name\"])  # Output: John\n",
+    "print(menu[\"dessert\"])  # Output: Ice Cream\n",
+    "print(meals[\"lunch\"])   # Output: ['Salad', 'Sandwich', 'Juice']\n",
+    "print(user_profile[\"preferences\"][\"language\"])  # Output: English"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f7a6626e",
+   "metadata": {},
+   "source": [
+    "### Dictionary Methods"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "88375ecb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "person.get(\"name\")  # Output: John\n",
+    "\n",
+    "# Accessing a non-existent key with a default value\n",
+    "# Here, we have set \"Unknown\" as the default value\n",
+    "# We tried to get the \"entree\" key which doesn't exist\n",
+    "# so it returns \"Unknown\"\n",
+    "menu.get(\"entree\", \"Unknown\")  # Output: Unknown\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bcd09de0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "meals.clear()  # This will remove all items from the meals dictionary\n",
+    "copied_person = person.copy()  # This creates a shallow copy of the person dictionary\n",
+    "menu.items()  # Returns a view object of the dictionary's items (key-value pairs)\n",
+    "menu.keys()   # Returns a view object of the dictionary's keys\n",
+    "menu.values() # Returns a view object of the dictionary's values\n",
+    "\n",
+    "copied_person.pop(\"age\", None)  # Removes the \"age\" key from the copied_person dictionary\n",
+    "# It returns None if the key was not found\n",
+    "\n",
+    "copied_person.popitem()  # Removes and returns the last inserted key-value pair from the copied_person dictionary\n",
+    "\n",
+    "person.update({\"age\": 31, \"city\": \"Los Angeles\"})  # Updates the person dictionary with new values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "396cea3a",
+   "metadata": {},
+   "source": [
+    "Shallow copy → makes a duplicate of the container, but the stuff inside is still linked. So if you change the inside, both will see the change.\n",
+    "\n",
+    "Deep copy → makes a duplicate of the container and the stuff inside. So changes don’t affect the other one."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ea7caf54",
+   "metadata": {},
+   "source": [
+    "### Modifying a Dictionary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "43e0b055",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "person[\"job\"] = \"Software Developer\"  # Adds a new key-value pair to the person dictionary\n",
+    "\n",
+    "del person[\"city\"]  # Removes the \"city\" key-value pair from the person dictionary"
+   ]
   },
   {
    "cell_type": "markdown",
