Added more files and finished the first notebook

--- a/intro_to_python.ipynb
+++ b/intro_to_python.ipynb
@@ -127,10 +127,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "853581d4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "name = \"Amanda\" # variable containing 'Amanda'\n",
     "age = 30 # variable containing age\n",
@@ -639,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "111fd18b",
    "metadata": {},
    "outputs": [],
@@ -1002,7 +1010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "6068914b",
    "metadata": {},
    "outputs": [],
@@ -1043,6 +1051,29 @@
    "source": [
     "# Finding the index of an element in a tuple\n",
     "info.index(30)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "57d40af1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['__add__', '__class__', '__class_getitem__', '__contains__', '__delattr__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__getitem__', '__getnewargs__', '__getstate__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__iter__', '__le__', '__len__', '__lt__', '__mul__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__rmul__', '__setattr__', '__sizeof__', '__str__', '__subclasshook__', 'count', 'index']\n",
+      "['__add__', '__class__', '__class_getitem__', '__contains__', '__delattr__', '__delitem__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__getitem__', '__getstate__', '__gt__', '__hash__', '__iadd__', '__imul__', '__init__', '__init_subclass__', '__iter__', '__le__', '__len__', '__lt__', '__mul__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__reversed__', '__rmul__', '__setattr__', '__setitem__', '__sizeof__', '__str__', '__subclasshook__', 'append', 'clear', 'copy', 'count', 'extend', 'index', 'insert', 'pop', 'remove', 'reverse', 'sort']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Checking the methods available for a data type\n",
+    "print(dir(info))\n",
+    "\n",
+    "\n",
+    "print(dir(my_list))"
    ]
   },
   {
@@ -1196,12 +1227,112 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "710e2a27",
+   "metadata": {},
+   "source": [
+    "A set is an unordered collection of unique items, separated by a comma and enclosed in braces. Because they are unordered, they cannot be indexed or sliced like lists."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "89ed0e7a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Creating a set\n",
+    "fruits = {\"apple\", \"banana\", \"cherry\"}\n",
+    "\n",
+    "# Using the set constructor to convert a list to a set\n",
+    "my_set = set(my_list)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c7041d1f",
+   "metadata": {},
+   "source": [
+    "### Set Methods"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6f7d289e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Since sets cannot be indexed, we can access them with python's built in 'in' operator\n",
+    "\n",
+    "print(\"apple\" in fruits)  # Returns True\n",
+    "print(\"orange\" in fruits)  # Returns False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1180c3f0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Adding items to a set\n",
+    "fruits.add(\"orange\")  # Adds \"orange\" to the fruits set\n",
+    "fruits.update([\"mango\", \"grape\"])  # Adds multiple items to the fruits set\n",
+    "\n",
+    "\n",
+    "# Removing items from a set\n",
+    "fruits.remove(\"banana\")  # Removes \"banana\" from the fruits set\n",
+    "\n",
+    "fruits.discard(\"cherry\")  # Removes \"cherry\" from the fruits set\n",
+    "\n",
+    "# The difference between remove() and discard() is that remove() will raise a KeyError if the item is not found,\n",
+    "# while discard() will not raise an error.\n",
+    "\n",
+    "fruits.pop()  # Removes and returns a random item from the set\n",
+    "# Pop will give an error if the set is empty.\n",
+    "\n",
+    "\n",
+    "# Clearing or deleting a set\n",
+    "fruits.clear()  # Removes all items from the fruits set\n",
+    "del fruits  # Deletes the fruits set entirely"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "03a829bf",
+   "metadata": {},
+   "source": [
+    "### Set Operations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a14d0839",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Union\n",
+    "# This combines two sets and returns a new set with all unique elements from both sets.\n",
+    "\n",
+    "fruits_a = {\"apple\", \"banana\", \"cherry\"}\n",
+    "fruits_b = {\"banana\", \"cherry\", \"date\"}\n",
+    "fruits_c = fruits_a.union(fruits_b)\n",
+    "\n",
+    "\n",
+    "# Intersection\n",
+    "# This returns a new set with elements that are common to both sets.\n",
+    "\n",
+    "fruits_d = fruits_a.intersection(fruits_b)\n",
+    "\n",
+    "\n",
+    "# Difference\n",
+    "# This returns a new set with elements that are in the first set but not in the second set.\n",
+    "\n",
+    "fruits_e = fruits_a.difference(fruits_b)\n",
+    "fruits_f = fruits_b.difference(fruits_a)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1215,7 +1346,12 @@
    "cell_type": "markdown",
    "id": "710d82da",
    "metadata": {},
-   "source": []
+   "source": [
+    "None is its own special data type in Python. The type is called NoneType. It’s used to mean “null\" or “no value.”\n",
+    "\n",
+    "It has exactly one value: None.\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
